[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://src/Player/player.gd" type="Script" id=2]
[ext_resource path="res://src/StateMachine/StateManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Player/States/walk.gd" type="Script" id=4]
[ext_resource path="res://src/Player/States/jump.gd" type="Script" id=5]
[ext_resource path="res://src/Player/States/fall.gd" type="Script" id=6]
[ext_resource path="res://src/Player/States/idle.gd" type="Script" id=7]
[ext_resource path="res://src/Player/States/hurt.gd" type="Script" id=8]
[ext_resource path="res://src/StateMachine/state_manager.gd" type="Script" id=9]
[ext_resource path="res://src/Player/States/await_input.gd" type="Script" id=10]
[ext_resource path="res://src/Player/States/toggle_slowdown.gd" type="Script" id=11]
[ext_resource path="res://src/Player/Shot.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Player/States/shoot.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.75, 7.75 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 2 )
Shot = ExtResource( 12 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.75 )
shape = SubResource( 1 )

[node name="MoveStateManager" parent="." instance=ExtResource( 3 )]
start_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="MoveStateManager"]
script = ExtResource( 7 )
walk_node = NodePath("../Walk")
jump_node = NodePath("../Jump")
fall_node = NodePath("../Fall")
hurt_node = NodePath("../Hurt")

[node name="Walk" type="Node2D" parent="MoveStateManager"]
script = ExtResource( 4 )
idle_node = NodePath("../Idle")
jump_node = NodePath("../Jump")
fall_node = NodePath("../Fall")
hurt_node = NodePath("../Hurt")

[node name="Jump" type="Node2D" parent="MoveStateManager"]
script = ExtResource( 5 )
idle_node = NodePath("../Idle")
walk_node = NodePath("../Walk")
fall_node = NodePath("../Fall")
hurt_node = NodePath("../Hurt")

[node name="Fall" type="Node2D" parent="MoveStateManager"]
script = ExtResource( 6 )
idle_node = NodePath("../Idle")
walk_node = NodePath("../Walk")
hurt_node = NodePath("../Hurt")

[node name="Hurt" type="Node2D" parent="MoveStateManager"]
script = ExtResource( 8 )
idle_node = NodePath("../Idle")
walk_node = NodePath("../Walk")
fall_node = NodePath("../Fall")

[node name="ActionStateManager" type="Node2D" parent="."]
script = ExtResource( 9 )
start_state = NodePath("AwaitInput")

[node name="AwaitInput" type="Node2D" parent="ActionStateManager"]
script = ExtResource( 10 )
shoot_node = NodePath("../Shoot")
toggle_slowdown_node = NodePath("../ToggleSlowdown")

[node name="Shoot" type="Node2D" parent="ActionStateManager"]
script = ExtResource( 13 )
await_input_node = NodePath("../AwaitInput")

[node name="ToggleSlowdown" type="Node2D" parent="ActionStateManager"]
script = ExtResource( 11 )
await_input_node = NodePath("../AwaitInput")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="ShotStartPosition" type="Position2D" parent="."]
position = Vector2( 16, -7.75 )
